@@ -1,3 +1,7 @@
+14 October 2013: Matthijs
+	- Additional log messages with reason why RR to be deleted cannot be
+	  found.
+
 14 October 2013: Wouter
 	- Fix for zone transfer that has different-cased RRSIG signer names
 	  or NSEC next-owner names.
